--- a/index.html
+++ b/index.html
@@ -18,12 +18,9 @@
 <body>
 
     <svg viewBox="0 0 100 100" width="100" height="100" xmlns="http://www.w3.org/2000/svg">
-<!--
-        <circle id="part1" cx="50" cy="50" r="20" fill="none" stroke="blue" stroke-width="40" />
-        <circle id="part0" cx="50" cy="50" r="20" fill="none" stroke="red" stroke-width="40" />
--->
 
-        <!--        <circle id="part3" cx="50" cy="50" r="20" fill="none" stroke="none"    stroke-width="40"/>-->
+
+
     </svg>
 
 
@@ -37,21 +34,22 @@
     <script>
         "use strict";
         //        let totalLength = document.querySelector("circle").getTotalLength();
-        let percentage_0 = 10;
-        let percentage_1 = 5;
+
         let allVal = 0;
+        let addUp = 0;
+        let circle_arr = [];
         let arrayOfPiePieces = [{
-            val: 100,
+            val: 200,
             color: "red"
         }, {
-            val: 200,
-            color: "blue"
+            val: 100,
+            color: "yellow"
         }, {
-            val: 200,
+            val: 100,
             color: "green"
         }];
 
-
+//        arrayOfPiePieces.reverse();
 
 
 
@@ -72,17 +70,28 @@
                 circle.setAttribute( 'cx', 50);
 
                 circle.setAttribute( 'cy', 50);
-                circle.setAttribute( 'r', 20 - (index * 2));
+                circle.setAttribute( 'r', 20 /*-(index*2)*/);
 
                 circle.style.fill = "none";
                 circle.style.strokeWidth = 40;
                 circle.style.stroke = each.color;
 
-                document.querySelector("svg").appendChild(circle);
+                //document.querySelector("svg").appendChild(circle);
                 console.log(circle.getTotalLength());
-                circle.style.strokeDasharray  = circle.getTotalLength();
-                circle.style.strokeDashoffset = circle.getTotalLength() -(circle.getTotalLength() * each.val /500);
+                let totalLength = 2*20*Math.PI;
+                circle.style.strokeDasharray  = totalLength ;
+                circle.style.strokeDashoffset =  totalLength-(addUp +totalLength * each.val /allVal);
+                addUp +=   (totalLength * each.val /allVal);
+                circle_arr.unshift(circle);
+
+
             })
+            console.log(circle_arr);
+            circle_arr.forEach(each => {
+
+                document.querySelector("svg").appendChild(each);
+
+            });
 //            document.querySelector("#part0").style.strokeDasharray = totalLength;
 //            document.querySelector("#part1").style.strokeDasharray = totalLength;
 //            document.querySelector("#part0").style.strokeDashoffset = totalLength - totalLength / 100 * percentage_0;
